[gd_scene load_steps=14 format=3 uid="uid://dnj0e3es7638e"]

[ext_resource type="Script" path="res://scences/ui/menus/character_selector.gd" id="1_b7efs"]
[ext_resource type="Texture2D" uid="uid://dpfqok8tuy4r7" path="res://assets/characters/tile_0084.png" id="1_gi0lx"]
[ext_resource type="Texture2D" uid="uid://o6mhnfvroyvx" path="res://assets/objects/tile_0125.png" id="2_2nrd6"]
[ext_resource type="Resource" uid="uid://dk2sl2aapuwe7" path="res://scences/main/run_startup.tres" id="2_8jbpy"]
[ext_resource type="Texture2D" uid="uid://clbji84e7ec6m" path="res://assets/objects/tile_0126.png" id="3_30xcd"]

[sub_resource type="Gradient" id="Gradient_mtqjb"]
colors = PackedColorArray(0.2, 0.117647, 0.0509804, 1, 0.054902, 0, 0.0588235, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_tstuo"]
gradient = SubResource("Gradient_mtqjb")
width = 50

[sub_resource type="LabelSettings" id="LabelSettings_aj7pw"]
font_size = 24
shadow_size = 4
shadow_color = Color(0.772549, 0.454902, 0.72549, 0.509804)

[sub_resource type="LabelSettings" id="LabelSettings_xrujp"]
font_size = 8
shadow_size = 4
shadow_color = Color(0.772549, 0.454902, 0.72549, 0.509804)

[sub_resource type="ButtonGroup" id="ButtonGroup_bycrl"]

[sub_resource type="Animation" id="Animation_u5hhp"]
resource_name = "fade_in"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScenceTransition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScenceTransition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_mcieo"]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScenceTransition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScenceTransition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_km6g1"]
_data = {
"fade_in": SubResource("Animation_u5hhp"),
"fade_out": SubResource("Animation_mcieo")
}

[node name="CharacterSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b7efs")
run_startup = ExtResource("2_8jbpy")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_tstuo")

[node name="CharacterText" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 12.0
offset_top = 8.0
offset_right = -12.0
offset_bottom = 98.0
grow_horizontal = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="CharacterText"]
unique_name_in_owner = true
layout_mode = 2
text = "Name Pending"
label_settings = SubResource("LabelSettings_aj7pw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="CharacterText"]
unique_name_in_owner = true
layout_mode = 2
text = "A rogue AI originally developed by Starfield
Industries for military strategy purposes. Likes to manipulate
battles to its favour and let its summons do all the work.
"
label_settings = SubResource("LabelSettings_xrujp")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="CharacterPortrait" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = -90.0
offset_right = 69.0
offset_bottom = -30.0
grow_vertical = 0
scale = Vector2(1.3, 1.3)
texture = ExtResource("1_gi0lx")
expand_mode = 1
stretch_mode = 5

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -71.0
offset_top = -29.0
offset_right = -11.0
offset_bottom = -11.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 6
text = "Continue"

[node name="CharacterButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -33.0
offset_top = -81.0
offset_right = 57.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="MachineButton" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_bycrl")

[node name="Icon" type="TextureRect" parent="CharacterButtons/MachineButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.5
offset_top = -13.0
offset_right = 12.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2nrd6")

[node name="WitchButton" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_bycrl")

[node name="Icon" type="TextureRect" parent="CharacterButtons/WitchButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.5
offset_top = -13.0
offset_right = 12.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_30xcd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="ScenceTransition" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_km6g1")
}

[node name="ColorRect" type="ColorRect" parent="ScenceTransition"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.117647, 0.0509804, 1)

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CharacterButtons/MachineButton" to="." method="_on_machine_button_pressed"]
[connection signal="pressed" from="CharacterButtons/WitchButton" to="." method="_on_witch_button_pressed"]
[connection signal="animation_finished" from="ScenceTransition" to="." method="_on_scence_transition_animation_finished"]
